fluxcd/apps/base/synapse/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: synapse
  annotations:
    linkerd.io/inject: enabled
